Test/Files/Parser/FullParserTestCases/Good/FullTests/Out/testcase02_04.out
<Expr> ::= true


Parse error on line 3:
...[] ID) {		if (true);	}}class SomeOt
----------------------^
Expecting '{', 'if', 'while', 'printLine', 'ID', 'int', 'boolean'